# VantaBlack-Schemas

./: .gitignore  CHANGELOG.md  README.md  backlog.md  pyproject.toml
src/vantablack_schemas/: __init__.py  enrichment.py  enums.py  intent_block.py  leg.py  retry_state.py
src/vantablack_schemas/fixtures/: __init__.py  _payloads.py
tests/: test_contract.py  test_intent_block.py  test_retry_state.py
