[project]
name = "vantablack-schemas"
version = "0.1.5"
description = "Shared Pydantic schemas for VantaBlack Core / EXE / PM (IntentBlock + related models)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "VantaBlack", email = "noreply@anthropic.com" },
]
dependencies = [
    "pydantic>=2.5.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vantablack_schemas"]

[tool.hatch.build.targets.sdist]
include = [
    "src/vantablack_schemas",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
